# TeleFuser

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  README_zh.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  lint.yml  release-pypi.yml  test.yml  tf-kernel-ci.yml  tf-kernel-release.yml
benchmarks/telefuser_aiperf/: README.md  benchmark_contract.yaml  stream_benchmark_contract.yaml
docs/: requirements.txt
docs/en/: adding_new_example.md  adding_new_model.md  attention.md  benchmark_aiperf.md  configuration.md  feature_cache.md  hash_config_management.md  index.md  latent_cache.md  lingbot_video.md  offload.md  parallel.md  profiler.md  quantization.md  release_pypi.md  service.md  stream_scheduler.md  stream_server.md  testing.md  tf_kernel.md
docs/quantization/: telefuser_fp8_deployment.md  telefuser_nf4_deployment.md
docs/stylesheets/: extra.css
docs/zh/: adding_new_example.md  adding_new_model.md  adf_scoring_guide.md  attention.md  benchmark_aiperf.md  benchmark_aiperf_design.md  benchmark_current_comparison.md  configuration.md  feature_cache.md  hash_config_management.md  index.md  latent_cache.md  lingbot_video.md  model_loading.md  offload.md  parallel.md  profiler.md  quantization.md  release_pypi.md  service.md  stream_scheduler.md  stream_server.md  testing.md  tf_kernel.md
examples/: README.md  example_config.yaml  run_examples.py
examples/hunyuan_video/: hunyuan_video_i2v.py  hunyuan_video_t2v.py
examples/lingbot/: README.md  lingbot_world_fast_image_to_video_h100.py  lingbot_world_v2_image_to_video_h100.py  stream_lingbot_world_fast.py  stream_lingbot_world_v2.py  stream_lingbot_world_v2_7gpu_split_async_vae.py
examples/lingbot_video/: README.md  lingbot_video_dense_1_3b.py  lingbot_video_generate.py  lingbot_video_moe_30b.py  lingbot_video_service.py
examples/liveact/: PROGRESS.md  liveact_i2v_1gpu.py  liveact_s2v.py  liveact_s2v_h100.py
examples/longcat_video/: longcat_image_to_video.py  longcat_text_to_video.py  (+3 more)
scripts/: build_telefuser_dist.sh  install_dev.sh  publish_telefuser_pypi.sh  run_ci_tests.sh  setup_aiperf_repo.sh
telefuser/: _logo.py  service_types.py  webrtc_ice.py
tf-kernel/: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README_zh.md  pyproject.toml  rename_wheels.sh
tf-kernel/docs/source/: conf.py  contributing.rst  development.rst  installation.rst  quickstart.rst
tf-kernel/docs/source/api/: attention.rst  elementwise.rst  gemm.rst  index.rst
tf-kernel/scripts/: set_version.py
(+288 files in other folders)
